Replaced deprecated Maven2 'maven-compat' layer.